--- a/krokodille2.html
+++ b/krokodille2.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>The Croc-game!</h3>
+    <img src ="croc.jpg"/>
     <div>Poeng:</div>
     <div id="scoreBoard">0</div>
-    <img src ="krokodille.png"/>
     <div id="firstNum">-</div>
     <input type="text" onchange="saveInput(this.value)"></input>
     <div id="secondNum">-</div>
@@ -77,9 +78,17 @@
     </script>
 </body>
 <style>
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        height: 100vh;
+        display: grid;
+        place-items: center;
+        background-color: rgba(82, 201, 134, 0.1);
+}
     img{
-        height: 100px; 
-        width: 100px;
+        height: 300px; 
+        width: 300px;
     }
     input{
         width: 50px;
